--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs'
 
+
 }
 
 android {
@@ -66,9 +67,13 @@ dependencies {
     implementation 'androidx.core:core-splashscreen:1.0.0'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation  'com.google.dagger:dagger:2.43.2'
+
    // kapt 'com.google.dagger:dagger-compiler:2.43.2'
     //paging
     implementation"androidx.paging:paging-runtime-ktx:3.1.1"
+    apply plugin: 'com.android.application'
+    apply plugin: 'kotlin-android'
+    apply plugin: 'kotlin-android-extensions'
 
 
 
